Changed name of project to correct one in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viade_0",
+  "name": "viade_en3a",
   "version": "0.1.0",
   "homepage": "https://arquisoft.github.io/viade_en3a/",
   "private": true,
