--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "homepage": "https://arquisoft.github.io/viade_en3a/",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "shx": "0.3.2"
   },
