--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "leaflet": "^1.6.0",
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "shx": "0.3.2"
   },
