--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "shx": "0.3.2"
   },
