--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
-    "shx": "0.3.2"
+    "shx": "0.3.2",
+    "solid-file-client": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
