--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/rdflib": "^0.20.1",
+    "@types/solid-auth-client": "^2.4.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "leaflet": "^1.6.0",
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.3",
-    "leaflet": "^1.6.0",
     "rdflib": "^1.0.6",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
