--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "shx": "0.3.2",
     "solid-file-client": "^1.0.2"
   },
