--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "shx": "0.3.2",
-    "solid-file-client": "^1.0.2"
+    "solid-file-client": "^1.0.2",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
