Functionality and testing finished

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/rdflib": "^0.20.1",
     "@types/solid-auth-client": "^2.4.0",
+    "ajax": "0.0.4",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
@@ -19,6 +20,7 @@
     "rdflib": "^1.0.6",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-router-dom": "^5.1.2",
