--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/solid-auth-client": "^2.4.0",
     "ajax": "0.0.4",
     "bootstrap": "^4.4.1",
+    "cucumber": "^6.0.5",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
     "mdbootstrap": "^4.14.0",
@@ -33,6 +34,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
+    "test:e2e": "jest -c e2e/jest.config.js",
     "docs": "shx rm -rf build/docs && asciidoctor -D build/docs -a imagesdir=./images -r asciidoctor-diagram src/docs/index.adoc && shx cp -R src/docs/images build/docs",
     "eject": "react-scripts eject"
   },
@@ -50,5 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-cucumber": "^2.0.11",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^2.1.1"
   }
 }
