--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/solid-auth-client": "^2.4.0",
     "ajax": "0.0.4",
     "bootstrap": "^4.4.1",
+    "i18next": "^19.3.4",
+    "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
     "mdbootstrap": "^4.14.0",
@@ -22,6 +24,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.4",
     "react-leaflet": "^2.6.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
