Add cucumber+puppeteer skeletond and actions/pages/selectors for future

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
+    "test:e2e": "jest -c e2e/jest.config.js",
     "docs": "shx rm -rf build/docs && asciidoctor -D build/docs -a imagesdir=./images -r asciidoctor-diagram src/docs/index.adoc && shx cp -R src/docs/images build/docs",
     "eject": "react-scripts eject"
   },
@@ -54,5 +55,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cucumber": "^6.0.5",
+    "jest-cucumber": "^2.0.11",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^2.1.1"
   }
 }
