--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
+    "leaflet-geosearch": "^2.7.0",
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.3",
+    "nominatim": "^0.1.0",
     "rdflib": "^1.0.6",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -26,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.4",
     "react-leaflet": "^2.6.1",
+    "react-leaflet-geosearch": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "shx": "0.3.2",
