--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/solid-auth-client": "^2.4.0",
     "ajax": "0.0.4",
     "bootstrap": "^4.4.1",
+    "bs-custom-file-input": "^1.3.4",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
@@ -24,7 +25,7 @@
     "nominatim": "^0.1.0",
     "rdflib": "^1.0.6",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.4",
