--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@ldflex/comunica": "^3.3.0",
+    "@solid/query-ldflex": "^2.10.0",
     "@solid/react": "^1.8.0",
     "@testing-library/dom": "^7.2.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +19,7 @@
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
+    "ldflex": "^2.8.0",
     "leaflet": "^1.6.0",
     "leaflet-geosearch": "^2.7.0",
     "mdbootstrap": "^4.14.0",
