--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 script:
   - npm install -g codecov
   - npm test && codecov
+  - npm test:e2e && codecov
   - CI=false npm run build
   - npm run docs
 deploy:
