--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "nothing": "",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
     "test:e2e": "jest -c e2e/jest.config.js",
+    "jest": "jest -c e2e/jest.config.js",
     "docs": "shx rm -rf build/docs && asciidoctor -D build/docs -a imagesdir=./images -r asciidoctor-diagram src/docs/index.adoc && shx cp -R src/docs/images build/docs",
     "eject": "react-scripts eject"
   },
