--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y install ruby openjdk-8-jre
   - sudo gem install asciidoctor asciidoctor-diagram
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=3000
+  # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=3000
 script:
   - npm install -g codecov
   - npm test && codecov
